Avanços no bison/flex de configuração. Falta preencher a lista com mais possíveis configurações, melhorar a eficiencia da busca (talvez com busca binaria) e fazer o projeto de fato usar o sistema.
git-svn-id: svn://svn/henriquelima/labprog@242 c5a4425f-b1d8-4b97-91a7-095824198b80

--- a/configuration/Makefile
+++ b/configuration/Makefile
@@ -16,4 +16,4 @@ config_bison.c : config.y
 
 .PHONY: clean
 clean   :
-	rm $(objects) *.c *.h exec_config
+	rm $(objects) config_flex.c config_bison.c config_bison.h exec_config
