Ta pronto! Só falta adicionar mais configurações e fazer o projeto usar. E nukar o main de testes...
git-svn-id: svn://svn/henriquelima/labprog@248 c5a4425f-b1d8-4b97-91a7-095824198b80

--- a/configuration/Makefile
+++ b/configuration/Makefile
@@ -1,8 +1,8 @@
-objects = config_flex.o config_bison.o
-CFLAGS = 
+objects = config_flex.o config_bison.o values.o ../lib/common.o
+CFLAGS = -g -pedantic -ansi
 CC = gcc
 
-exec_config    : config_flex.o config_bison.o
+exec_config    : config_flex.o config_bison.o values.o
 	$(CC) $(CFLAGS) $(objects) -lfl -o $@
 
 config_flex.o  : config_flex.c config_bison.c
@@ -13,6 +13,8 @@ config_flex.c  : config.l
 
 config_bison.c : config.y
 	bison -o config_bison.c -d config.y
+	
+values.o : configuration.h ../lib/common.o
 
 .PHONY: clean
 clean   :
