mais mudanças, mais configurações.
git-svn-id: svn://svn/henriquelima/labprog@252 c5a4425f-b1d8-4b97-91a7-095824198b80

--- a/config/Makefile
+++ b/config/Makefile
@@ -7,7 +7,7 @@ exec_config    : $(objects)
 
 config_flex.o  : config_flex.c config_bison.c configuration.h
 config_bison.o : config_bison.c configuration.h
-values.o : configuration.h common.o
+values.o : configuration.h common.o values_default.c
 command_line.o: configuration.h command_line.c
 
 common.o : ../lib/common.h
